@@ -743,9 +743,10 @@ UnitTest.asynctest('browser.tinymce.core.html.DomParserTest', function (success,
     const blobCache = BlobCache();
     const parser = DomParser({ blob_cache: blobCache });
     const base64 = 'R0lGODdhDAAMAIABAMzMzP///ywAAAAADAAMAAACFoQfqYeabNyDMkBQb81Uat85nxguUAEAOw==';
-    const base64Uri = `data:image/gif;base64,${base64}`;
-    const image = `<img src="${base64Uri}" />`;
-    const serializedHtml = serializer.serialize(parser.parse(`<p>${image}</p><p>${image}</p>`));
+    const gifBase64Uri = `data:image/gif;base64,${base64}`;
+    const pngBase64Uri = `data:image/png;base64,${base64}`;
+    const images = `<img src="${gifBase64Uri}" /><img src="${pngBase64Uri}" />`;
+    const serializedHtml = serializer.serialize(parser.parse(`<p>${images}</p><p>${images}</p>`));
     let count = 0;
     blobCache.findFirst((bi) => {
       if (bi.base64() === base64) {
@@ -754,7 +755,7 @@ UnitTest.asynctest('browser.tinymce.core.html.DomParserTest', function (success,
       return false;
     });
 
-    Assertions.assertEq('Only one image should be in the blob cache', 1, count);
+    Assertions.assertEq('Only one image per mime type should be in the blob cache', 2, count);
     Assertions.assertEq('HTML shouldn\'t include a base64 data URI', true, serializedHtml.indexOf(base64) === -1);
     blobCache.destroy();
   });
